--- a/front-end-web/package.json
+++ b/front-end-web/package.json
@@ -9,7 +9,8 @@
     "@types/node": "12.7.11",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
-    "axios": "^0.19.0",
+    "firebase": "^7.2.3",
+    "ky": "^0.15.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
