--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "firebase": "^7.2.3",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
     "googleapis": "^44.0.0"
