--- a/front-end-web/package.json
+++ b/front-end-web/package.json
@@ -10,10 +10,13 @@
     "@types/node": "12.7.11",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
+    "axios": "^0.19.0",
     "firebase": "^7.2.3",
+    "firebaseui": "^4.2.0",
     "got": "^9.6.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-firebaseui": "^4.0.0",
     "react-scripts": "3.2.0",
     "typescript": "3.6.3"
   },
