--- a/functions/package.json
+++ b/functions/package.json
@@ -13,10 +13,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/nanoid": "^2.1.0",
     "firebase": "^7.2.3",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
-    "googleapis": "^44.0.0"
+    "googleapis": "^44.0.0",
+    "nanoid": "^2.1.7"
   },
   "devDependencies": {
     "typescript": "^3.2.2"
